--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -23,11 +23,11 @@
 
 \newtheorem{thm}{Theorem}[subsection]
 \newtheorem*{thm*}{Theorem}
-\newtheorem{prop}[thm]{Proposition}
+\newtheorem{prop}{Proposition}[subsection]
 \newtheorem*{prop*}{Proposition}
 \newtheorem{defn}{Definition}[subsection]
 \newtheorem*{defn*}{Definition}
-\newtheorem{lem}[thm]{Lemma}
+\newtheorem{lem}{Lemma}[subsection]
 \newtheorem{cor}{Corollary}[thm]
 \newtheorem{exa}{Example}
 \newtheorem{exe}{Exercise}
