--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -1,13 +1,13 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\begin{subsection}{Abstract simplicial complexes}
+\begin{subsection}{Simplicial complexes}
     \subfile{sections/1/1}    
 \end{subsection}
-\begin{comment}
-\begin{subsection}{Differential forms on abstract simplicial complexes}
+\begin{subsection}{Forms on abstract simplicial complexes}
     \subfile{sections/1/2}    
 \end{subsection}
+\begin{comment}
 \begin{subsection}{Integration on simplicial chains}
     \subfile{sections/1/3}
 \end{subsection}
