--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -41,16 +41,19 @@
 \newcommand{\eval}[1]{\Big{|}_{#1}}
 \newcommand{\mc}[1]{\mathcal{#1}}
 \newcommand{\scal}[2]{\langle #1, #2 \rangle}
+\newcommand{\del}{\partial}
 
 \begin{document}
 \begin{titlepage}
     \subfile{sections/front}
 \end{titlepage}
 \pagenumbering{roman}
-\subfile{sections/abstract_ita}
-\newpage
-\subfile{sections/abstract_eng}
-\newpage
+\begin{comment}
+    \subfile{sections/abstract_ita}
+    \newpage
+    \subfile{sections/abstract_eng}
+    \newpage
+\end{comment}
 \tableofcontents
 \newpage
 \pagenumbering{arabic}
