--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -1,21 +1,16 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\begin{subsection}{Simplicial complexes}
-    \subfile{sections/1/1}    
-\end{subsection}
-\begin{subsection}{Forms on abstract simplicial complexes}
-    \subfile{sections/1/2}    
-\end{subsection}
-\begin{comment}
-\begin{subsection}{Integration on simplicial chains}
-    \subfile{sections/1/3}
-\end{subsection}
-\begin{subsection}{Smooth real manifolds and abstract graphs}
-    \subfile{sections/1/4}
-\end{subsection}
-\begin{subsection}{Convolutional neural networks on euclidean domains}
-    \subfile{sections/1/5}
-\end{subsection}
-\end{comment}
+    \begin{subsection}{Simplicial complexes}
+        \subfile{sections/1/1}    
+    \end{subsection}
+    \begin{subsection}{Forms and integration on abstract simplicial complexes}
+        \subfile{sections/1/2}    
+    \end{subsection}
+    \begin{subsection}{Smooth real manifolds and abstract graphs}
+        \subfile{sections/1/3}
+    \end{subsection}
+    \begin{subsection}{Convolutional neural networks on euclidean domains}
+        \subfile{sections/1/4}
+    \end{subsection}
 \end{document}
