--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -40,6 +40,8 @@
 \newcommand{\pder}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\eval}[1]{\Big{|}_{#1}}
 \newcommand{\mc}[1]{\mathcal{#1}}
+\newcommand{\mf}[1]{\mathfrak{#1}}
+\newcommand{\bmc}[1]{\textbf\mathcal{#1}}
 \newcommand{\scal}[2]{\langle #1, #2 \rangle}
 \newcommand{\del}{\partial}
 
@@ -55,7 +57,10 @@
     \tableofcontents
     \newpage
     \pagenumbering{arabic}
-    \begin{section}{Introduction}
+    Draft[Most of the deep learning techniques used today are based on models 
+    which learn a partition of the set of smooth functions defined on euclidean 
+    domains into human friendly equivalence classes]
+    \begin{section}{Preliminaries on topology}
         \subfile{sections/1}
     \end{section}
 \end{document}
