--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -1,16 +1,18 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
+    Before discussing deep learning on graphs and manifolds we will give a definition of
+    graph and higher dimensional structures called abstract simplicial complexes, in order 
+    to define convolutions on those structures we will define the Laplace operator by 
+    translating De Rham cohomology on oriented simplicial complexes.
+    Furthermore we shall discuss other possible definitions of convolution based on the invariance of 
+    oriented simplicial complexes under some group of transformations i.e. even permutations
+    of indexes.     
+    
     \begin{subsection}{Simplicial complexes}
         \subfile{sections/1/1}    
     \end{subsection}
     \begin{subsection}{Forms and integration on abstract simplicial complexes}
         \subfile{sections/1/2}    
-    \end{subsection}
-    \begin{subsection}{Smooth real manifolds and abstract graphs}
-        \subfile{sections/1/3}
-    \end{subsection}
-    \begin{subsection}{Convolutional neural networks on euclidean domains}
-        \subfile{sections/1/4}
     \end{subsection}
 \end{document}
