--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -9,10 +9,13 @@
     oriented simplicial complexes under some group of transformations i.e. even permutations
     of indexes.     
     
-    \begin{subsection}{Simplicial complexes}
+    \begin{section}{Simplicial complexes}
+        In this section we shall define simplicial complexes, which, as abstract as they might look, can 
+        be used to model interactions among individuals, traffic and road networks, as well as shapes, and 
+        to approximate functions on some compact manifold.
         \subfile{sections/1/1}    
-    \end{subsection}
-    \begin{subsection}{Forms and integration on abstract simplicial complexes}
+    \end{section}
+    \begin{section}{Forms and integration on abstract simplicial complexes}
         \subfile{sections/1/2}    
-    \end{subsection}
+    \end{section}
 \end{document}
