--- a/tesi/sections/front.tex
+++ b/tesi/sections/front.tex
@@ -14,7 +14,7 @@
     \end{center}
     \vspace{23mm}
     \begin{center}
-        {{\LARGE{\bf GEOMETRIC DEEP LEARNING}}\\}
+        {{\LARGE{\bf DEEP LEARNING ON ABSTRACT \\ \vspace{0.5cm} SIMPLICIAL COMPLEXES}}\\}
     \end{center}
     \vspace{50mm} \par \noindent
     \begin{minipage}[t]{0.47\textwidth}
