--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -1,7 +1,8 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    Before discussing deep learning on graphs and manifolds we will give a definition of
+    
+    Before discussing deep learning on graphs and manifolds we will give a definitions of
     graph and higher dimensional structures called abstract simplicial complexes, in order 
     to define convolutions on those structures we will define the Laplace operator by 
     translating De Rham cohomology on oriented simplicial complexes.
