--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -30,6 +30,9 @@
 \newtheorem{defn}[thm]{Definition}
 \newtheorem{exa}[thm]{Example}
 
+\theoremstyle{remark}
+\newtheorem{rem}[thm]{Remark}
+
 \setcounter{secnumdepth}{0} % no section numbering displayed, no idea how
 
 \newcommand{\bb}[1]{\textbf{#1}}
