--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -8,13 +8,13 @@
     \end{defn}
     
     One calls $\mc{V}$ the \ii{vertex set} of $\mc{A}$ and denotes it by $Vert(\mc{A})$; since the vertex
-    set is finite we expect every abstract simplex to be finite, therefore we might use the notation $\sigma = \{ v_i \}_{i \in I_\sigma}$,
-    which so far we consider invariant under arbitrary permutations on the index set $I_\sigma$.
+    set is finite we expect every abstract simplex to be also finite, therefore we might use the notation $\sigma = \{ v_i \}_{i \in I_\sigma}$,
+    which so far we consider invariant under arbitrary permutations on the finite index set $I_\sigma$.
 
     \begin{defn}
         Let $\mc{A}$ be an abstract simplicial complex we define its \ii{dimension} to be
         \[ dim \mc{A} := max_{\sigma \in \mc{A}}(|\sigma|-1), \]
-        where $|\sigma|$ is the cardinality of $\sigma$.
+        where by $|\sigma|$ we denote the cardinality of $\sigma$.
     \end{defn}
 
     One calls an abstract simplex of dimension $p$ an \ii{abstract p-simplex}, according to our
