--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -7,9 +7,10 @@
         where $\sigma$ are called \ii{abstract simplexes} of $\mc{A}$.
     \end{defn}
     
+    {\color{red}
     One calls $\mc{V}$ the \ii{vertex set} of $\mc{A}$ and denotes it by $Vert(\mc{A})$; since the vertex
     set is finite we expect every abstract simplex to be also finite, therefore we might use the notation $\sigma = \{ v_i \}_{i \in I_\sigma}$,
-    which so far we consider invariant under arbitrary permutations on the finite index set $I_\sigma$.
+    which so far we consider invariant under arbitrary permutations on the finite index set $I_\sigma$.}
 
     \begin{defn}
         Let $\mc{A}$ be an abstract simplicial complex we define its \ii{dimension} to be
